<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/ic_courses"
        android:title="@string/nav_courses" />

    <item
        android:id="@+id/navigation_teachers"
        android:icon="@drawable/ic_teacher"
        android:title="@string/nav_teachers" />

    <item
        android:id="@+id/navigation_classes"
        android:icon="@drawable/ic_class"
        android:title="@string/nav_classes" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_contact"
        android:title="@string/nav_contact" />

</menu>
